--- a/src/assets/css/HomePage.css
+++ b/src/assets/css/HomePage.css
@@ -1,10 +1,19 @@
+.title,
+.section-title,
+.nailroom-title,
+.card-title,
+.achievement-card .card-title {
+  color: #e91e63 !important;
+}
+
 .banner {
   background-image: url("../img/banner.jpg");
   background-size: cover;
   background-position: center;
   color: white;
   text-align: center;
-  padding: 100px 0;
+  padding: 150px 0;
+  margin-top: 20px;
 }
 
 .banner .title {
